Rework the Brexit checker question AB test
This appears to have broken at some point. I was having problems with the
instance variable, so I've flipped the implementation to be driven from the
yaml file.

--- a/app/lib/brexit_checker/questions.yaml
+++ b/app/lib/brexit_checker/questions.yaml
@@ -3,6 +3,7 @@ questions:
   - key: nationality
     type: single
     caption: About you and your family
+    caption_b: First answer some questions about you, then about any business you run
     text: 'What nationality are you?'
     options:
       - label: British
