Email notifications for brexit checker subscribers - November updates

--- a/app/lib/brexit_checker/notifications.yaml
+++ b/app/lib/brexit_checker/notifications.yaml
@@ -279,3 +279,15 @@ notifications:
     type: addition
     action_id: S017
     date: 2020-11-02
+  - uuid: "77562e3e-e4b9-435a-8f16-045eb8b938d5"
+    type: addition
+    action_id: S042
+    date: 2020-11-25
+  - uuid: "79abcb5d-febc-4e29-8265-b1946faec27b"
+    type: addition
+    action_id: T122
+    date: 2020-11-25
+  - uuid: "2f615e3b-be85-4c9d-a58d-fad710c00959"
+    type: addition
+    action_id: T123
+    date: 2020-11-25
