--- a/app/lib/brexit_checker/notifications.yaml
+++ b/app/lib/brexit_checker/notifications.yaml
@@ -35,3 +35,11 @@ notifications:
     type: addition
     action_id: T123
     date: 2020-11-25
+  - uuid: 1342fe6e-d2dd-47fa-81c2-31af6d39b197
+    type: addition
+    action_id: T124
+    date: '2020-12-11'
+  - uuid: ad4b8e50-ee68-4e6c-abf7-eeb05d636933
+    type: addition
+    action_id: T125
+    date: '2020-12-11'
